fix result spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -92,13 +92,13 @@ body {
   }
 
   #result{
-    margin: 7%;
     line-height: 0%;
     padding: 5px;
     text-align: center;
     font-size: 70px;
     color: white;
     font-family: 'Fascinate Inline', cursive;    text-transform:Uppercase;
+    margin-top: 5%;
   }
 
 
